increase max perm size
Signed-off-by: Thomas Steffes <tsteffes@promotably.com>